Bug 128567 - Highlighting of the Writer table is flickering
Summary: Highlighting of the Writer table is flickering
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All macOS (All)
: low minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-11-03 13:09 UTC by Roman Kuznetsov
Modified: 2023-09-07 12:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-11-03 13:09:29 UTC
Description:
Highlighting of the Writer table is flickering

Steps to Reproduce:
1. Create a table in Writer document
2. Select all table using selecting all column by mouse with arrow above table
3. Highlighting of the Writer table is flickering

If you select all table using Ctrl+A or mouse selecting cell by cell or selecting with Shift+cursor arrows then you don't see flickering of highlighting

Actual Results:
Highlighting of the Writer table is flickering

Expected Results:
Highlighting of the Writer table isn't flickering


Reproducible: Always


User Profile Reset: No



Additional Info:
repro in

Version: 6.4.0.0.alpha1+
Build ID: 188bdbaf19241cd51820832fdb4522747534bec6
CPU threads: 4; OS: Mac OS X 10.15.1; UI render: default; VCL: osx; 
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

but not in

Версия: 6.3.2.1
ID сборки: db810050ff08fd4774137f693d5a01d22f324dfd
Потоков ЦП: 4; ОС:Mac OS X 10.15.1; Отрисовка ИП: по умолчанию; VCL: osx; 
Локаль: ru-RU (ru_RU.UTF-8); Язык интерфейса: ru-RU
Calc: threaded


so it's a regression
Comment 1 Ahmad Haris 2019-11-06 05:31:51 UTC
Hi Roman Kuznetsov,

Thank you for reporting the bug. I can confirm that the bug is present both in stable and master.

Version: 6.3.3.2
Build ID: a64200df03143b798afd1ec74a12ab50359878ed
CPU threads: 8; OS: Mac OS X 10.15; UI render: GL; VCL: osx; 
Locale: en-ID (en_ID.UTF-8); UI-Language: en-US
Calc: threaded

Version: 6.4.0.0.alpha1+
Build ID: 7ee07296a66df29555c9e9a684f24bc68201cb78
CPU threads: 8; OS: Mac OS X 10.15; UI render: default; VCL: osx; 
Locale: en-ID (en_ID.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-11-14 12:49:34 UTC
Yep, it seems it flickers while selecting the table ( while the mouse button is down ) but it doesn't flicker when the button is released
Comment 3 Xisco Faulí 2019-11-14 13:01:43 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c56bf1479cc71d1a2b0639f6383e90c1f7e3655b

author	Miklos Vajna <vmiklos@collabora.com>	2019-09-16 21:15:28 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-09-17 08:57:15 +0200
commit c56bf1479cc71d1a2b0639f6383e90c1f7e3655b (patch)
tree 3db679971be5be40d2f737202de6b8106dc1d53c
parent 813cca94cd3a08d98c09fc7c34afddd02dc912ce (diff)
tdf#105330 sw: fix lost cursor on undoing nested table insert

Bisected with: bibisect-mac64-6.4

Adding Cc: to Miklos Vajna
Comment 4 Commit Notification 2019-12-17 08:04:19 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d4ea54e18346a35590933dd1e8b83d1c12a741de

tdf#128567 sw: fix flicker of table selection highlight

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2019-12-17 13:42:54 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/da2000648b852047ec9d865891539c28ada97730

tdf#128567 sw: fix flicker of table selection highlight

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Roman Kuznetsov 2019-12-28 10:59:40 UTC
verified in

Version: 6.5.0.0.alpha0+
Build ID: e22a3f596ce50b5166063e217d96ef674a54d380
CPU threads: 4; OS: Mac OS X 10.15.1; UI render: GL; VCL: osx; 
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

thanks, Miklos