tdf#128567 sw: fix flicker of table selection highlight

Regression from commit c56bf1479cc71d1a2b0639f6383e90c1f7e3655b
(tdf#105330 sw: fix lost cursor on undoing nested table insert,
2019-09-16), the problem was that in case lcl_notifyRow() invokes
SwRowFrame::ModifyNotification(), then the table selection is re-created
all the time, while in case it does not, then it may result in a cursor
loss.

The reason for the flicker is that normally
sw::DocumentTimerManager::m_aDocIdle is not invoked between the
SwEditWin mouse button down/move/up events, but in case the notification
is done, then the idle kicks in once the page frame of the row is
invalidated.

Fix the problem by avoiding the notification in the table selection
case: this makes the flicker go away and the original cursor loss
problem remains fixed, too.

[ It is not clear to me woh can I test if the flicker happens, would
need some mechanism to ensure that the mouse button down/up/move chain
happens without the idle kicking in, perhaps. ]

Change-Id: I91e0af0d3b1b9824754c0bf0be8535d294601787